# saod_2_public

./: .gitignore  CMakeLists.txt  README.md  build.bat
inheritance/: CMakeLists.txt  ILinkedList.h  IPriorityQueue.h  LinkedList.h  ListNode.h  PriorityQueue.h  inh_test.cpp  task05.md
linked_list/: CMakeLists.txt  LinkedList.h  list_test.cpp
multi/: CMakeLists.txt  multi.cpp
task1/: CMakeLists.txt  отчет 1.docx
task1/problem1/: problem1.cpp
task1/problem2/: problem2.cpp  utils.cpp  utils.h
task11/: Program.cs  RegExpLab.csproj  RegExpLab.sln
task2/: CMakeLists.txt  arrays.cpp  pointer.cpp  strings.cpp  swap.cpp  utils.cpp  utils.h
task3/: CMakeLists.txt  Complex.hpp  classes.cpp  отчет 3.docx
task4/: CMakeLists.txt  Str.h  strings.cpp
task5/: CMakeLists.txt  LifeTime.cpp  Test.cpp  Test.h  отчёт 5.docx
task6/: CMakeLists.txt  KMP.cpp  KMP_StateMachine.h  PF.h  resource.h
task6/TestData/: ReadMe.txt  h2.tst  i1.tst  i2.tst  i3.tst
task6a/: CMakeLists.txt  RefStrings.cpp  Str.h  _str.h
task7/: CMakeLists.txt  ListOrVector.cpp  SmartPointers.cpp  Test.h
task8/: CMakeLists.txt  Edge.h  Node.h  STComplete.cpp  SufTree.cpp  SufTree.h
trie/: CMakeLists.txt  Trie.h  TrieNode.cpp  TrieNode.h  trieMain.cpp
